--- a/.github/workflows/notify-older-prs.yml
+++ b/.github/workflows/notify-older-prs.yml
@@ -1,8 +1,8 @@
 name: Check Old Pull Requests
 
 on:
-  schedule:
-    - cron: "0 9 * * 1"   # Runs every Monday at 9 AM UTC
+  # schedule:
+  #   - cron: "0 9 * * 1"   # Runs every Monday at 9 AM UTC
   workflow_dispatch:      # Allow manual run from Actions tab
 
 jobs:
